--- a/app/src/main/res/layout/fragment_global_console.xml
+++ b/app/src/main/res/layout/fragment_global_console.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_global_console_ll"
     android:layout_width="match_parent"
@@ -10,49 +11,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/fragment_global_console_tv_name_console"
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Error message:"
-            android:textColor="@color/colorGrey"/>
-
-        <TextView
-            android:id="@+id/fragment_global_console_tv_error_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/colorGrey"
-            android:text="still working normal..." />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/fragment_global_console_tv_last_error_text"
-            android:layout_width="20dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Last error:"
-            android:textColor="@color/colorGrey"/>
+            android:textColor="@android:color/darker_gray" />
 
         <TextView
             android:id="@+id/fragment_global_console_tv_last_error_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@color/colorGrey"
-             />
+            android:textColor="@color/colorGrey" />
     </LinearLayout>
-
-
 
 </LinearLayout>
