--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#961222</color>
     <color name="colorBlack">#050404</color>
-    <color name="colorGrey">#585858</color>
+    <color name="colorGrey">#686565</color>
+    <color name="colorBlue">#2196F3</color>
+    <color name="colorShadow">#7F000000</color>
 </resources>
