--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_connection_ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="208dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        app:srcCompat="@drawable/logo_in_activity" />
 
     <ProgressBar
         android:id="@+id/activity_connection_pb"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
+        android:layout_width="208dp"
         android:layout_height="wrap_content"
-        android:indeterminate="true"/>
-
+        android:layout_marginStart="3dp"
+        android:indeterminate="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,6 +29,10 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:text="Сегодня:"
+        android:shadowColor="@color/colorShadow"
+        android:shadowRadius="2"
+        android:shadowDx="1"
+        android:shadowDy="1"
         android:textSize="24sp" />
 
     <TextView
@@ -30,6 +41,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
+        android:shadowColor="@color/colorShadow"
+        android:shadowRadius="2"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp" />
 
     <TextView
@@ -37,7 +53,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-        android:text="Последние данные"
+        android:shadowColor="@color/colorShadow"
+        android:shadowRadius="2"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:text="Последние данные:"
         android:textSize="24sp" />
 
     <TextView
@@ -45,6 +65,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:textColor="@color/colorAccent"
+        android:shadowColor="@color/colorShadow"
+        android:shadowRadius="2"
+        android:shadowDx="1"
+        android:shadowDy="1"
         android:layout_gravity="center"
         android:textSize="24sp" />
 
@@ -54,6 +79,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
+        android:shadowColor="@color/colorShadow"
+        android:shadowRadius="2"
+        android:shadowDx="1"
+        android:shadowDy="1"
         android:textSize="12sp" />
 
     <RelativeLayout
@@ -66,6 +95,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:textColor="@color/colorAccent"
+            android:shadowColor="@color/colorShadow"
+            android:shadowRadius="2"
+            android:shadowDx="1"
+            android:shadowDy="1"
             android:onClick="onClickConnection"
             android:text="Get and write data" />
 
@@ -97,6 +131,10 @@
         android:layout_height="wrap_content"
         android:text="Console:"
         android:textColor="@android:color/darker_gray"
+        android:shadowColor="@color/colorShadow"
+        android:shadowRadius="2"
+        android:shadowDx="1"
+        android:shadowDy="1"
         android:background="@android:color/background_dark"/>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
